--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
 <h1>Mon 1er site web</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>La ville de Malaga</title>
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+ <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
+
+
+	<link rel="stylesheet" type="text/css" href="style.css ">
+</head>
+<body>
+
+	<div class="navbar"> 	
+	
+
+	<div class="links">
+		<a href="" class="link">Présentation de la ville</a>
+		<a href="" class="link">L'organisme linguistique EF</a>
+		<a href="" class="link">Activités proposés</a>
+		<a href="" class="link">Contact</a>
+	</div>
+
+</div>
+
+<br>
+
+		
+
+
+  <div class="musicvideo">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/106Y4um63lo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+
+<div class="main">
+  	<h1>Pars apprendre l'Espagnol avec EF !
+  	</h1>
+  	<h2>Séjours 16/25 ans</h2>
+  	<p>Toute l'Andalousie à porté de main : De Malaga à Séville en passant par Marbella.</p>
+  </div>
+  
+
+  <footer>
+  	<a class="foot" href="#">A propos</a>
+  	<a class="foot" href="#">Mentions légales</a>
+    <a class="foot" href="#">Plan du site</a>
+  </footer>
+
+
+  <script src="https://kit.fontawesome.com/18ee24e4d3.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+</body>
+</html>
+
+</div>
+	
+
+
+</body>
+</html>
